PR target/51552         * dwarf2cfi.c (dwarf2out_frame_debug): Move any_cfis_emitted code...         (scan_trace): ... here.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@182604 138bc75d-0d04-0410-961f-82ee72b054a4